src/pj/poco/test/neg/NPARMCT4.POC
/* Test that parameters are counted when there are enough w/extra comma */
#pragma poco echo "expect>too many parameters in call to function 'mul'"

int mul(int i, int j)
{
return i*j;
}

main()
{
mul(1,2,);
puts("I shouldn't have compiled!");
}
